--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,23 @@
 body{
- background-color:rgba(95, 158, 160, 0.5);
-  
+  font-size: large;
+  width: 100vw;
+  height: 100vh;
+}
+#main-container {
+  background-color: aquamarine;
+  width: 30rem;
+  height: auto;
+  aspect-ratio: 1/1;
+  inset: 5rem;
+  margin: auto;
+
+  box-shadow: 0 -.5rem 0 0 #2979e2,
+0 0 1rem 1rem rgb(226, 220, 220);
 }
 
 #display-error, #display-exchange {
-  padding-top: 3rem;
+  padding-top: 1.2rem;
+  font-family:sans-serif;
 }
 
 .input-group-text {
@@ -13,4 +26,10 @@ body{
 
 #title {
   margin-top: 3rem;
+  font-family:sans-serif;
+}
+
+#btn {       
+  padding: .7rem;
+
 }
